plugins/org.bflow.toolbox.hive.interchange/src/org/bflow/toolbox/hive/interchange/mif/grammar/AditusGrammarParser.java
// $ANTLR 3.4 F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g 2013-07-11 16:28:04

package org.bflow.toolbox.hive.interchange.mif.grammar;

import org.bflow.toolbox.hive.interchange.mif.aditus.AditusEdgeMetaInfo;
import org.bflow.toolbox.hive.interchange.mif.aditus.AditusMetaInfo;
import org.bflow.toolbox.hive.interchange.mif.aditus.AditusModelMetaInfo;
import org.bflow.toolbox.hive.interchange.mif.aditus.AditusShapeMetaInfo;

import java.util.List;
import java.util.ArrayList;
import java.util.LinkedList;
import java.util.Map;
import java.util.HashMap;



import org.antlr.runtime.*;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class AditusGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ATTRIBUTES", "COMMENT", "DEQ", "DOT", "EDGE", "EDGES", "EQ", "ESC_SEQ", "HEIGHT", "HEX_DIGIT", "ID", "IDENTIFIER", "IIF", "IMPORT", "INT", "LBRACE", "MODEL", "NAME", "NULL", "OCTAL_ESC", "RBRACE", "SHAPE", "SHAPES", "SOURCE", "STRING", "TARGET", "TYPE", "UNICODE_ESC", "WIDTH", "WS", "X", "XPATH", "Y", "'=>'", "'|'"
    };

    public static final int EOF=-1;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int ATTRIBUTES=4;
    public static final int COMMENT=5;
    public static final int DEQ=6;
    public static final int DOT=7;
    public static final int EDGE=8;
    public static final int EDGES=9;
    public static final int EQ=10;
    public static final int ESC_SEQ=11;
    public static final int HEIGHT=12;
    public static final int HEX_DIGIT=13;
    public static final int ID=14;
    public static final int IDENTIFIER=15;
    public static final int IIF=16;
    public static final int IMPORT=17;
    public static final int INT=18;
    public static final int LBRACE=19;
    public static final int MODEL=20;
    public static final int NAME=21;
    public static final int NULL=22;
    public static final int OCTAL_ESC=23;
    public static final int RBRACE=24;
    public static final int SHAPE=25;
    public static final int SHAPES=26;
    public static final int SOURCE=27;
    public static final int STRING=28;
    public static final int TARGET=29;
    public static final int TYPE=30;
    public static final int UNICODE_ESC=31;
    public static final int WIDTH=32;
    public static final int WS=33;
    public static final int X=34;
    public static final int XPATH=35;
    public static final int Y=36;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AditusGrammarParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AditusGrammarParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return AditusGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g"; }



    // $ANTLR start "aditus"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:23:1: aditus returns [AditusMetaInfo aditusMetaInfo = new AditusMetaInfo()] : ( imports )? modelDefinition ( shapeDefinition )+ ( edgeDefinition )+ EOF ;
    public final AditusMetaInfo aditus() throws RecognitionException {
        AditusMetaInfo aditusMetaInfo =  new AditusMetaInfo();


        List<String> imports1 =null;

        AditusModelMetaInfo modelDefinition2 =null;

        AditusShapeMetaInfo shapeDefinition3 =null;

        AditusEdgeMetaInfo edgeDefinition4 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:24:2: ( ( imports )? modelDefinition ( shapeDefinition )+ ( edgeDefinition )+ EOF )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:24:4: ( imports )? modelDefinition ( shapeDefinition )+ ( edgeDefinition )+ EOF
            {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:24:4: ( imports )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==IMPORT) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:24:5: imports
                    {
                    pushFollow(FOLLOW_imports_in_aditus36);
                    imports1=imports();

                    state._fsp--;


                     aditusMetaInfo.Imports = imports1; 

                    }
                    break;

            }


            pushFollow(FOLLOW_modelDefinition_in_aditus42);
            modelDefinition2=modelDefinition();

            state._fsp--;


             aditusMetaInfo.Model = modelDefinition2; 

            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:24:133: ( shapeDefinition )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==SHAPES) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:24:134: shapeDefinition
            	    {
            	    pushFollow(FOLLOW_shapeDefinition_in_aditus47);
            	    shapeDefinition3=shapeDefinition();

            	    state._fsp--;


            	     aditusMetaInfo.Shapes.add(shapeDefinition3); 

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:24:215: ( edgeDefinition )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==EDGES) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:24:216: edgeDefinition
            	    {
            	    pushFollow(FOLLOW_edgeDefinition_in_aditus54);
            	    edgeDefinition4=edgeDefinition();

            	    state._fsp--;


            	     aditusMetaInfo.Edges.add(edgeDefinition4); 

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            match(input,EOF,FOLLOW_EOF_in_aditus60); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return aditusMetaInfo;
    }
    // $ANTLR end "aditus"



    // $ANTLR start "imports"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:26:1: imports returns [List<String> imports = new LinkedList<String>()] : ( importStatement )+ ;
    public final List<String> imports() throws RecognitionException {
        List<String> imports =  new LinkedList<String>();


        String importStatement5 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:27:2: ( ( importStatement )+ )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:27:4: ( importStatement )+
            {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:27:4: ( importStatement )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==IMPORT) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:27:5: importStatement
            	    {
            	    pushFollow(FOLLOW_importStatement_in_imports74);
            	    importStatement5=importStatement();

            	    state._fsp--;


            	     imports.add(importStatement5); 

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return imports;
    }
    // $ANTLR end "imports"



    // $ANTLR start "importStatement"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:29:1: importStatement returns [String decl] : IMPORT qualifiedName ;
    public final String importStatement() throws RecognitionException {
        String decl = null;


        String qualifiedName6 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:30:2: ( IMPORT qualifiedName )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:30:4: IMPORT qualifiedName
            {
            match(input,IMPORT,FOLLOW_IMPORT_in_importStatement91); 

            pushFollow(FOLLOW_qualifiedName_in_importStatement93);
            qualifiedName6=qualifiedName();

            state._fsp--;


            decl = qualifiedName6;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return decl;
    }
    // $ANTLR end "importStatement"



    // $ANTLR start "modelDefinition"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:32:1: modelDefinition returns [AditusModelMetaInfo modelInfo = new AditusModelMetaInfo()] : MODEL EQ LBRACE baseDef= baseDefinitionBlock RBRACE ;
    public final AditusModelMetaInfo modelDefinition() throws RecognitionException {
        AditusModelMetaInfo modelInfo =  new AditusModelMetaInfo();


        AditusGrammarParser.baseDefinitionBlock_return baseDef =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:33:2: ( MODEL EQ LBRACE baseDef= baseDefinitionBlock RBRACE )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:33:4: MODEL EQ LBRACE baseDef= baseDefinitionBlock RBRACE
            {
            match(input,MODEL,FOLLOW_MODEL_in_modelDefinition109); 

            match(input,EQ,FOLLOW_EQ_in_modelDefinition111); 

            match(input,LBRACE,FOLLOW_LBRACE_in_modelDefinition113); 

            pushFollow(FOLLOW_baseDefinitionBlock_in_modelDefinition119);
            baseDef=baseDefinitionBlock();

            state._fsp--;


             modelInfo.Id = (baseDef!=null?baseDef.id:null); modelInfo.Type = (baseDef!=null?baseDef.type:null); modelInfo.Name = (baseDef!=null?baseDef.name:null); modelInfo.Attributes = (baseDef!=null?baseDef.attributes:null); 

            match(input,RBRACE,FOLLOW_RBRACE_in_modelDefinition123); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return modelInfo;
    }
    // $ANTLR end "modelDefinition"



    // $ANTLR start "shapeDefinition"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:35:1: shapeDefinition returns [AditusShapeMetaInfo shapeMetaInfo = new AditusShapeMetaInfo()] : SHAPES EQ valueAssignmentExpr LBRACE baseDef= baseDefinitionBlock grafDef= graphicDefinitionBlock RBRACE ;
    public final AditusShapeMetaInfo shapeDefinition() throws RecognitionException {
        AditusShapeMetaInfo shapeMetaInfo =  new AditusShapeMetaInfo();


        AditusGrammarParser.baseDefinitionBlock_return baseDef =null;

        AditusGrammarParser.graphicDefinitionBlock_return grafDef =null;

        AditusGrammarParser.valueAssignmentExpr_return valueAssignmentExpr7 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:36:2: ( SHAPES EQ valueAssignmentExpr LBRACE baseDef= baseDefinitionBlock grafDef= graphicDefinitionBlock RBRACE )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:36:4: SHAPES EQ valueAssignmentExpr LBRACE baseDef= baseDefinitionBlock grafDef= graphicDefinitionBlock RBRACE
            {
            match(input,SHAPES,FOLLOW_SHAPES_in_shapeDefinition137); 

            match(input,EQ,FOLLOW_EQ_in_shapeDefinition139); 

            pushFollow(FOLLOW_valueAssignmentExpr_in_shapeDefinition141);
            valueAssignmentExpr7=valueAssignmentExpr();

            state._fsp--;


             shapeMetaInfo.Node = (valueAssignmentExpr7!=null?input.toString(valueAssignmentExpr7.start,valueAssignmentExpr7.stop):null); 

            match(input,LBRACE,FOLLOW_LBRACE_in_shapeDefinition145); 

            pushFollow(FOLLOW_baseDefinitionBlock_in_shapeDefinition151);
            baseDef=baseDefinitionBlock();

            state._fsp--;


             shapeMetaInfo.Id = (baseDef!=null?baseDef.id:null); shapeMetaInfo.Type = (baseDef!=null?baseDef.type:null); shapeMetaInfo.Name = (baseDef!=null?baseDef.name:null); shapeMetaInfo.Attributes = (baseDef!=null?baseDef.attributes:null); 

            pushFollow(FOLLOW_graphicDefinitionBlock_in_shapeDefinition159);
            grafDef=graphicDefinitionBlock();

            state._fsp--;


             shapeMetaInfo.Width = (grafDef!=null?grafDef.width:null); shapeMetaInfo.Height = (grafDef!=null?grafDef.height:null); shapeMetaInfo.X = (grafDef!=null?grafDef.x:null); shapeMetaInfo.Y = (grafDef!=null?grafDef.y:null); 

            match(input,RBRACE,FOLLOW_RBRACE_in_shapeDefinition163); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return shapeMetaInfo;
    }
    // $ANTLR end "shapeDefinition"



    // $ANTLR start "edgeDefinition"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:38:1: edgeDefinition returns [AditusEdgeMetaInfo edgeMetaInfo = new AditusEdgeMetaInfo()] : EDGES EQ valueAssignmentExpr LBRACE baseDef= baseDefinitionBlock edgeDef= edgeDefinitionBlock RBRACE ;
    public final AditusEdgeMetaInfo edgeDefinition() throws RecognitionException {
        AditusEdgeMetaInfo edgeMetaInfo =  new AditusEdgeMetaInfo();


        AditusGrammarParser.baseDefinitionBlock_return baseDef =null;

        AditusGrammarParser.edgeDefinitionBlock_return edgeDef =null;

        AditusGrammarParser.valueAssignmentExpr_return valueAssignmentExpr8 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:39:2: ( EDGES EQ valueAssignmentExpr LBRACE baseDef= baseDefinitionBlock edgeDef= edgeDefinitionBlock RBRACE )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:39:4: EDGES EQ valueAssignmentExpr LBRACE baseDef= baseDefinitionBlock edgeDef= edgeDefinitionBlock RBRACE
            {
            match(input,EDGES,FOLLOW_EDGES_in_edgeDefinition177); 

            match(input,EQ,FOLLOW_EQ_in_edgeDefinition179); 

            pushFollow(FOLLOW_valueAssignmentExpr_in_edgeDefinition181);
            valueAssignmentExpr8=valueAssignmentExpr();

            state._fsp--;


             edgeMetaInfo.Node = (valueAssignmentExpr8!=null?input.toString(valueAssignmentExpr8.start,valueAssignmentExpr8.stop):null); 

            match(input,LBRACE,FOLLOW_LBRACE_in_edgeDefinition185); 

            pushFollow(FOLLOW_baseDefinitionBlock_in_edgeDefinition191);
            baseDef=baseDefinitionBlock();

            state._fsp--;


             edgeMetaInfo.Id = (baseDef!=null?baseDef.id:null); edgeMetaInfo.Type = (baseDef!=null?baseDef.type:null); edgeMetaInfo.Name = (baseDef!=null?baseDef.name:null); edgeMetaInfo.Attributes = (baseDef!=null?baseDef.attributes:null); 

            pushFollow(FOLLOW_edgeDefinitionBlock_in_edgeDefinition199);
            edgeDef=edgeDefinitionBlock();

            state._fsp--;


             edgeMetaInfo.Source = (edgeDef!=null?edgeDef.source:null); edgeMetaInfo.Target = (edgeDef!=null?edgeDef.target:null); 

            match(input,RBRACE,FOLLOW_RBRACE_in_edgeDefinition203); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return edgeMetaInfo;
    }
    // $ANTLR end "edgeDefinition"


    public static class edgeDefinitionBlock_return extends ParserRuleReturnScope {
        public String source = null;
        public String target = null;
    };


    // $ANTLR start "edgeDefinitionBlock"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:41:1: edgeDefinitionBlock returns [String source = null, String target = null] : sourceAssignment targetAssignment ;
    public final AditusGrammarParser.edgeDefinitionBlock_return edgeDefinitionBlock() throws RecognitionException {
        AditusGrammarParser.edgeDefinitionBlock_return retval = new AditusGrammarParser.edgeDefinitionBlock_return();
        retval.start = input.LT(1);


        String sourceAssignment9 =null;

        String targetAssignment10 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:42:2: ( sourceAssignment targetAssignment )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:42:4: sourceAssignment targetAssignment
            {
            pushFollow(FOLLOW_sourceAssignment_in_edgeDefinitionBlock217);
            sourceAssignment9=sourceAssignment();

            state._fsp--;


             retval.source = sourceAssignment9; 

            pushFollow(FOLLOW_targetAssignment_in_edgeDefinitionBlock221);
            targetAssignment10=targetAssignment();

            state._fsp--;


             retval.target = targetAssignment10; 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "edgeDefinitionBlock"



    // $ANTLR start "sourceAssignment"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:44:1: sourceAssignment returns [String value = null] : SOURCE EQ linkExpr ;
    public final String sourceAssignment() throws RecognitionException {
        String value =  null;


        AditusGrammarParser.linkExpr_return linkExpr11 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:45:2: ( SOURCE EQ linkExpr )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:45:4: SOURCE EQ linkExpr
            {
            match(input,SOURCE,FOLLOW_SOURCE_in_sourceAssignment237); 

            match(input,EQ,FOLLOW_EQ_in_sourceAssignment239); 

            pushFollow(FOLLOW_linkExpr_in_sourceAssignment241);
            linkExpr11=linkExpr();

            state._fsp--;


             value = (linkExpr11!=null?input.toString(linkExpr11.start,linkExpr11.stop):null); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "sourceAssignment"



    // $ANTLR start "targetAssignment"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:47:1: targetAssignment returns [String value = null] : TARGET EQ linkExpr ;
    public final String targetAssignment() throws RecognitionException {
        String value =  null;


        AditusGrammarParser.linkExpr_return linkExpr12 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:48:2: ( TARGET EQ linkExpr )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:48:4: TARGET EQ linkExpr
            {
            match(input,TARGET,FOLLOW_TARGET_in_targetAssignment257); 

            match(input,EQ,FOLLOW_EQ_in_targetAssignment259); 

            pushFollow(FOLLOW_linkExpr_in_targetAssignment261);
            linkExpr12=linkExpr();

            state._fsp--;


             value = (linkExpr12!=null?input.toString(linkExpr12.start,linkExpr12.stop):null); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "targetAssignment"


    public static class graphicDefinitionBlock_return extends ParserRuleReturnScope {
        public String width = null;
        public String height = null;
        public String x = null;
        public String y = null;
    };


    // $ANTLR start "graphicDefinitionBlock"
    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:50:1: graphicDefinitionBlock returns [String width = null, String height = null, String x = null, String y = null] : ( widthAssignment )? ( heightAssignment )? ( xAssignment )? ( yAssignment )? ;
    public final AditusGrammarParser.graphicDefinitionBlock_return graphicDefinitionBlock() throws RecognitionException {
        AditusGrammarParser.graphicDefinitionBlock_return retval = new AditusGrammarParser.graphicDefinitionBlock_return();
        retval.start = input.LT(1);


        String widthAssignment13 =null;

        String heightAssignment14 =null;

        String xAssignment15 =null;

        String yAssignment16 =null;


        try {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:2: ( ( widthAssignment )? ( heightAssignment )? ( xAssignment )? ( yAssignment )? )
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:4: ( widthAssignment )? ( heightAssignment )? ( xAssignment )? ( yAssignment )?
            {
            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:4: ( widthAssignment )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==WIDTH) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:5: widthAssignment
                    {
                    pushFollow(FOLLOW_widthAssignment_in_graphicDefinitionBlock278);
                    widthAssignment13=widthAssignment();

                    state._fsp--;


                     retval.width = widthAssignment13; 

                    }
                    break;

            }


            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:60: ( heightAssignment )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==HEIGHT) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:61: heightAssignment
                    {
                    pushFollow(FOLLOW_heightAssignment_in_graphicDefinitionBlock285);
                    heightAssignment14=heightAssignment();

                    state._fsp--;


                     retval.height = heightAssignment14; 

                    }
                    break;

            }


            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:119: ( xAssignment )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==X) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:120: xAssignment
                    {
                    pushFollow(FOLLOW_xAssignment_in_graphicDefinitionBlock292);
                    xAssignment15=xAssignment();

                    state._fsp--;


                     retval.x = xAssignment15; 

                    }
                    break;

            }


            // F:\\bflow\\GIT\\emtb\\org.bflow.toolbox.interchange\\grammar\\AditusGrammar.g:51:163: ( yAssignment )?
            int alt8=2;
            int LA8_0 = input.LA(1);
